# AI_solo_coder_task_B_149

./: .dockerignore  README.md  build_backend.bat  build_backend.sh  docker-compose.yml  package.json  start_all.bat
backend/: CMakeLists.txt
backend/cmake/: gzip_frontend.cmake
backend/include/: alarm_mqtt_module.h  clickhouse_client.h  era_comparator.h  http_api_server.h  logger.h  material_comparator.h  message_bus.h  metrics_collector.h  mqtt_alert_manager.h  pretension_optimizer.h  range_predictor_module.h  spring_simulator_module.h  trebuchet_physics.h  udp_receiver_module.h  udp_sensor_receiver.h  vr_trebuchet.h
backend/src/: alarm_mqtt_module.cpp  clickhouse_client.cpp  era_comparator.cpp  http_api_server.cpp  logger.cpp  main.cpp  material_comparator.cpp  message_bus.cpp  metrics_collector.cpp  mqtt_alert_manager.cpp  pretension_optimizer.cpp  range_predictor_module.cpp  spring_simulator_module.cpp  trebuchet_physics.cpp  udp_receiver_module.cpp  udp_sensor_receiver.cpp  vr_trebuchet.cpp
config/: spring_params.json  trajectory_params.json
database/: init_clickhouse.sql
docker/backend/: Dockerfile
docker/clickhouse/: Dockerfile  config.xml  users.xml
docker/clickhouse/init/: 001_schema.sql
docker/mqtt/: Dockerfile  mosquitto.conf
docker/prometheus/: prometheus.yml
docker/simulator/: Dockerfile
frontend/: index.html
frontend/config/: spring_params.json  trajectory_params.json
frontend/css/: style.css
frontend/js/: api.js  app.js  data-chart.js  era-compare.js  material-compare.js  physics.js  preload-analysis.js  range_panel.js  spring-animation.js  traction_trebuchet_3d.js  trajectory-view.js  trebuchet-model.js  virtual-operation.js
scripts/: gzip_frontend.js
simulator/: requirements.txt  trebuchet_sensor_simulator.py
tests/: test_api_integration.py  test_modules.cpp  test_physics_cpp.cpp  test_physics_features.js  test_virtual_operation_strategy.js
